Maintain search state when back button is pressed.

--- a/src/web/templates/directives/cp-package-card.html
+++ b/src/web/templates/directives/cp-package-card.html
@@ -1,4 +1,4 @@
-<a class="cp-package-card" href="/package/{{ package.humanId }}-{{ package.name | slugify }}{{ searchParams }}" ng-if="package">
+<a class="cp-package-card" href="/package/{{ package.humanId }}-{{ package.name | slugify }}" ng-if="package">
     <div class="cp-package-card-image-wrap">
         <img ng-src="{{ package.images[0].medium }}" />
     </div>
