--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -105,7 +105,7 @@
                 </p>
             </section>
 
-            <button class="cp-btn cp-btn-link" type="button" cp-back>Go Back</button>
+            <button class="cp-btn cp-btn-link" type="button" cp-back>Back to search results</button>
         </article>
 
         <div class="cp-package-sidebar">
