--- a/src/web/templates/customer/dashboard.html
+++ b/src/web/templates/customer/dashboard.html
@@ -25,7 +25,7 @@
                         <div class="col-xs-4">
                             <div class="cp-form-group">
                                 <label class="cp-form-label" for="search_date">Delivery date</label>
-                                <input class="cp-form-control" id="search_date" name="searchDate" type="text" datepicker-options="{showButtonBar: false, showWeeks: false, startingDay: 1}" datepicker-popup="dd/MM/yyyy" is-open="isDatePickerOpen" min-date="minDate" year-range="2" ng-click="openDatePicker($event)" ng-model="search.date" />
+                                <input class="cp-form-control" id="search_date" name="searchDate" type="text" datepicker-options="{showButtonBar: false, showWeeks: false, startingDay: 1}" datepicker-popup="dd/MM/yyyy" is-open="isDatePickerOpen" min-date="minDate" year-range="2" ng-click="openDatePicker($event)" ng-model="pickedDate" />
                             </div>
                         </div>
 
