--- a/src/web/templates/general/checkout-delivery-details.html
+++ b/src/web/templates/general/checkout-delivery-details.html
@@ -1,5 +1,5 @@
 <div class="cp-checkout-steps-wrap">
-    <ng-include src="'/dist/templates/directives/cp-checkout-steps.html'" ng-init="activeStep = 1"></ng-include>
+    <ng-include src="getTemplateUrl('directives/cp-checkout-steps.html')" ng-init="activeStep = 1"></ng-include>
 </div>
 
 <div class="container">
