Filter by max budget only once you’ve stopped sliding.

--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -55,7 +55,8 @@
                         min="1"
                         max="50"
                         step="1"
-                        ng-model="search.maxBudget" />
+                        ng-model="search.tempMaxBudget"
+                        ng-mouseup="changeMaxBudget()" />
                     <output class="cp-search-budget-per-person-output" for="budget_per_person">
                         {{ search.maxBudget | currency:'£':0 }}
                     </output>
