Scroll to previous position in search when back button is pressed.

--- a/app/Resources/views/angular.html.twig
+++ b/app/Resources/views/angular.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Loading{% endblock %}
 
 {% block body %}
-    <main role="main" ng-view>
+    <main role="main" ng-view autoscroll>
     </main>
 
     <div class="state-loading">
