Use CSS background instead of <img> for package.

--- a/src/web/scss/directives/cp-checkout-review.scss
+++ b/src/web/scss/directives/cp-checkout-review.scss
@@ -65,7 +65,7 @@
 cp-package-card {
     margin-bottom: $cp-margin-base-vertical;
 
-    .cp-package-card-image-wrap {
+    .cp-package-card-image {
         padding-bottom: 50%;
 
         &::before,
