Vendor profile page.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -15,6 +15,7 @@
 @import 'partials/cp-tables';
 @import 'partials/cp-dashboard';
 @import 'partials/cp-checkout';
+@import 'partials/cp-vendor';
 
 /**
  * Misc
