Misc style changes.

--- a/src/web/scss/footer.scss
+++ b/src/web/scss/footer.scss
@@ -1,5 +1,5 @@
 body > footer {
     text-align: center;
-    padding-bottom: 1rem;
-    margin-top: 3rem;
+    padding-top: $cp-margin-base-vertical;
+    padding-bottom: $cp-margin-base-vertical;
 }
