--- a/src/web/scss/partials/_cp-dashboard.scss
+++ b/src/web/scss/partials/_cp-dashboard.scss
@@ -8,7 +8,7 @@
 }
 
 .cp-dashboard-main {
-    @extend .col-xs-8;
+    @extend .col-md-8;
 }
 
 .cp-dashboard-heading {
@@ -18,13 +18,38 @@
 
     > span {
         display: block;
-        font-size: $font-size-h2;
+        font-size: 42px;
         margin-top: $cp-margin-xs-vertical;
     }
 }
 
+.cp-dashboard-form {
+    > fieldset {
+        margin-bottom: $cp-margin-large-vertical;
+        padding: 30px 25px;
+    }
+
+    .row {
+        margin-right: -5px;
+        margin-left: -5px;
+
+        &:last-of-type {
+            > *[class^='col-'],
+            > *[class*=' col-'] {
+                margin-bottom: $cp-margin-small-vertical;
+            }
+        }
+    }
+
+    *[class^='col-'],
+    *[class*=' col-'] {
+        padding-right: 5px;
+        padding-left: 5px;
+    }
+}
+
 .cp-dashboard-sidebar {
-    @extend .col-xs-4;
+    @extend .col-md-4;
 }
 
 .cp-dashboard-order {
@@ -49,10 +74,10 @@
 }
 
 .cp-dashboard-order-date {
-    @include cp-font-title($font-size-large);
+    @include cp-font-title($font-size-h3);
     float: right;
     font-weight: 400;
-    line-height: 1.3; // 26px
+    line-height: 1;
     text-align: right;
     width: 40%;
 }
