--- a/src/web/templates/customer/dashboard.html
+++ b/src/web/templates/customer/dashboard.html
@@ -6,74 +6,62 @@
             <form class="cp-form cp-dashboard-form" name="dashboardForm" novalidate role="form" ng-submit="submit()">
                 <fieldset>
                     <div class="row">
-                        <div class="col-xs-5">
-                            <div class="cp-form-group">
-                                <label class="cp-form-label" for="search_event_type">Event type</label>
-                                <select class="cp-form-control" id="search_event_type" name="searchEventType" ng-model="search.eventType" ng-options="eventType.id as eventType.name for eventType in eventTypeOptions"></select>
-                            </div>
+                        <div class="cp-form-group col-md-5">
+                            <label class="cp-form-label" for="search_event_type">Event type</label>
+                            <select class="cp-form-control" id="search_event_type" name="searchEventType" ng-model="search.eventType" ng-options="eventType.id as eventType.name for eventType in eventTypeOptions"></select>
                         </div>
 
-                        <div class="col-xs-3">
-                            <div class="cp-form-group">
-                                <label class="cp-form-label" for="search_time">Time</label>
-                                <select class="cp-form-control" id="search_time" name="searchTime" ng-init="search.time" ng-model="search.time" ng-options="time.value as time.label for time in timeOptions"></select>
-                            </div>
+                        <div class="cp-form-group col-md-2">
+                            <label class="cp-form-label" for="search_time">Time</label>
+                            <select class="cp-form-control" id="search_time" name="searchTime" ng-init="search.time" ng-model="search.time" ng-options="time.value as time.label for time in timeOptions"></select>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-xs-4">
-                            <div class="cp-form-group">
-                                <label class="cp-form-label" for="search_date">Delivery date</label>
-                                <input class="cp-form-control" id="search_date" name="searchDate" type="text" datepicker-options="{showButtonBar: false, showWeeks: false, startingDay: 1}" datepicker-popup="dd/MM/yyyy" is-open="isDatePickerOpen" min-date="minDate" year-range="2" ng-click="openDatePicker($event)" ng-model="pickedDate" />
-                            </div>
+                        <div class="cp-form-group col-md-3">
+                            <label class="cp-form-label" for="search_date">Delivery date</label>
+                            <input class="cp-form-control" id="search_date" name="searchDate" type="text" datepicker-options="{showButtonBar: false, showWeeks: false, startingDay: 1}" datepicker-popup="dd/MM/yyyy" is-open="isDatePickerOpen" min-date="minDate" year-range="2" ng-click="openDatePicker($event)" ng-model="pickedDate" />
                         </div>
 
-                        <div class="col-xs-4">
-                            <div class="cp-form-group">
-                                <label class="cp-form-label" for="search_head_count">No. of people?</label>
-                                <select class="cp-form-control" id="search_head_count" name="searchHeadCount" ng-model="search.headCount" ng-options="headCount for headCount in headCountOptions"></select>
-                            </div>
+                        <div class="cp-form-group col-md-3">
+                            <label class="cp-form-label" for="search_head_count">No. of people?</label>
+                            <select class="cp-form-control" id="search_head_count" name="searchHeadCount" ng-model="search.headCount" ng-options="headCount for headCount in headCountOptions"></select>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-xs-5" ng-if="addresses.length > 0">
-                            <div class="cp-form-group">
-                                <label class="cp-form-label" for="search_postcode">
-                                    Deliver to saved location
-                                    <span class="form-element-invalid" ng-show="dashboardForm.$submitted && dashboardForm.searchPostcode.$error.required">Delivery location is required</span>
-                                </label>
-                                <select class="cp-form-control"
-                                    id="search_postcode"
-                                    name="searchPostcode"
-                                    ng-model="search.postcode"
-                                    ng-options="address.postcode as address.label for address in addresses"
-                                    ng-required="!search.newPostcode">
-                                </select>
-                            </div>
+                        <div class="cp-form-group col-md-5" ng-if="addresses.length > 0">
+                            <label class="cp-form-label" for="search_postcode">
+                                Deliver to saved location
+                                <span class="form-element-invalid" ng-show="dashboardForm.$submitted && dashboardForm.searchPostcode.$error.required">Delivery location is required</span>
+                            </label>
+                            <select class="cp-form-control"
+                                id="search_postcode"
+                                name="searchPostcode"
+                                ng-model="search.postcode"
+                                ng-options="address.postcode as address.label for address in addresses"
+                                ng-required="!search.newPostcode">
+                            </select>
                         </div>
 
-                        <div class="col-xs-1" ng-if="addresses.length > 0">
+                        <div class="col-md-1" ng-if="addresses.length > 0">
                             <span class="cp-form-separator">or</span>
                         </div>
 
-                        <div class="col-xs-5">
-                            <div class="cp-form-group">
-                                <label class="cp-form-label" for="search_new_postcode">
-                                    Enter new delivery postcode
-                                    <span class="form-element-invalid" ng-show="dashboardForm.$submitted && dashboardForm.searchNewPostcode.$error.pattern">Postcode is invalid</span>
-                                    <span class="form-element-invalid" ng-show="dashboardForm.$submitted && dashboardForm.searchNewPostcode.$error.required">Postcode is required</span>
-                                </label>
-                                <input class="cp-form-control"
-                                    id="search_new_postcode"
-                                    name="searchNewPostcode"
-                                    type="text"
-                                    placeholder="POSTCODE"
-                                    ng-model="search.newPostcode"
-                                    ng-pattern="/[a-zA-Z]{1,2}[0-9][0-9A-Za-z]?\s?[0-9][a-zA-Z]{2}/"
-                                    ng-required="addresses.length === 0" />
-                            </div>
+                        <div class="cp-form-group col-md-5">
+                            <label class="cp-form-label" for="search_new_postcode">
+                                Enter new delivery postcode
+                                <span class="form-element-invalid" ng-show="dashboardForm.$submitted && dashboardForm.searchNewPostcode.$error.pattern">Postcode is invalid</span>
+                                <span class="form-element-invalid" ng-show="dashboardForm.$submitted && dashboardForm.searchNewPostcode.$error.required">Postcode is required</span>
+                            </label>
+                            <input class="cp-form-control"
+                                id="search_new_postcode"
+                                name="searchNewPostcode"
+                                type="text"
+                                placeholder="POSTCODE"
+                                ng-model="search.newPostcode"
+                                ng-pattern="/[a-zA-Z]{1,2}[0-9][0-9A-Za-z]?\s?[0-9][a-zA-Z]{2}/"
+                                ng-required="addresses.length === 0" />
                         </div>
                     </div>
                 </fieldset>
