Update cp-history-table to use new API.

--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -3,7 +3,7 @@
 
     <h2>History</h2>
 
-    <cp-history-table history="customer.history"></cp-history-table>
+    <cp-history-table document-id="customer.id" document-type="CityPantry\CustomerBundle\Document\Customer"></cp-history-table>
 
     <h2>Details</h2>
 
