--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -205,5 +205,5 @@
 
     <h2>Order history</h2>
 
-    <cp-history-table history="order.history"></cp-history-table>
+    <cp-history-table document-id="order.id" document-type="CityPantry\OrderBundle\Document\Order"></cp-history-table>
 </div>
