--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -3,7 +3,7 @@
 
     <h2>History</h2>
 
-    <cp-history-table history="vendor.history"></cp-history-table>
+    <cp-history-table document-id="vendor.id" document-type="CityPantry\VendorBundle\Document\Vendor"></cp-history-table>
 
     <h2>Edit details</h2>
 
