--- a/src/web/templates/admin/edit-package.html
+++ b/src/web/templates/admin/edit-package.html
@@ -9,7 +9,7 @@
 
     <h2>History</h2>
 
-    <cp-history-table history="vendorPackage.history"></cp-history-table>
+    <cp-history-table document-id="vendorPackage.id" document-type="CityPantry\PackageBundle\Document\Package"></cp-history-table>
 
     <h2>Edit details</h2>
 
