--- a/src/web/templates/directives/cp-rating-stars.html
+++ b/src/web/templates/directives/cp-rating-stars.html
@@ -1,6 +1,6 @@
-<i class="icon" ng-class="getStarClass(1)"></i>
-<i class="icon" ng-class="getStarClass(2)"></i>
-<i class="icon" ng-class="getStarClass(3)"></i>
-<i class="icon" ng-class="getStarClass(4)"></i>
-<i class="icon" ng-class="getStarClass(5)"></i>
+<i class="icon" ng-class="getStarClass(1)" ng-click="set(1)"></i>
+<i class="icon" ng-class="getStarClass(2)" ng-click="set(2)"></i>
+<i class="icon" ng-class="getStarClass(3)" ng-click="set(3)"></i>
+<i class="icon" ng-class="getStarClass(4)" ng-click="set(4)"></i>
+<i class="icon" ng-class="getStarClass(5)" ng-click="set(5)"></i>
 <span class="sr-only"><span>{{ value }}</span>/5</span>
