--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -135,6 +135,7 @@ body {
 .thin-wrapper {
     width: 630px;
     margin: 0 auto;
+    position: relative;
 }
 // Wide wrapper used in admin pages.
 .wide-wrapper {
@@ -994,6 +995,7 @@ hr {
 @import 'directives/cp-package-card.scss';
 @import 'admin/general.scss';
 @import 'customer/account-details.scss';
+@import 'customer/order-leave-a-review.scss';
 @import 'customer/search.scss';
 @import 'customer/view-package.scss';
 @import 'vendor/delivery-radiuses.scss';
