--- a/src/web/scss/partials/_cp-header.scss
+++ b/src/web/scss/partials/_cp-header.scss
@@ -7,6 +7,10 @@
     letter-spacing: .05em;
     line-height: 1;
     text-transform: uppercase;
+
+    .cp-light {
+        font-weight: normal;
+    }
 }
 
 h1.cp-heading {
